[gd_scene load_steps=33 format=4 uid="uid://by1ydwv3oxie0"]

[ext_resource type="Texture2D" uid="uid://b2r77g38aossh" path="res://assets/sprites/ui/SettingsTitle.png" id="1_8gg7j"]
[ext_resource type="Script" path="res://menus/settings-menu/settings_menu.gd" id="1_f2gom"]
[ext_resource type="Texture2D" uid="uid://c6n1otllaac03" path="res://assets/sprites/tilesets/background_tileset.png" id="2_o4el6"]
[ext_resource type="Texture2D" uid="uid://d37qvmn7src22" path="res://assets/sprites/ui/keyboard.png" id="3_a5leq"]
[ext_resource type="Texture2D" uid="uid://b7eoijde168st" path="res://assets/sprites/ui/ui-pressed.png" id="4_o288i"]
[ext_resource type="Texture2D" uid="uid://cqrftknnfo2cs" path="res://assets/sprites/ui/ui.png" id="5_ovtxt"]
[ext_resource type="FontFile" uid="uid://b1urfel7egtmu" path="res://assets/fonts/VT323-Regular.ttf" id="6_c1yfi"]
[ext_resource type="AudioStream" uid="uid://ct1rtntxcwq5u" path="res://assets/sfx/click.wav" id="8_2r4mj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tuqm5"]
texture = ExtResource("2_o4el6")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
1:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
0:10/0 = 0
1:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
0:11/0 = 0
1:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
0:12/0 = 0
1:12/0 = 0
0:13/0 = 0
1:13/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y1q1i"]
texture = ExtResource("3_a5leq")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
2:0/size_in_atlas = Vector2i(2, 1)
2:0/0 = 0
5:0/size_in_atlas = Vector2i(2, 1)
5:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mftgi"]
texture = ExtResource("4_o288i")
0:0/size_in_atlas = Vector2i(2, 1)
0:0/0 = 0
0:1/size_in_atlas = Vector2i(3, 1)
0:1/0 = 0
0:2/size_in_atlas = Vector2i(4, 1)
0:2/0 = 0
3:0/0 = 0
2:0/0 = 0
3:1/0 = 0
4:1/0 = 0
4:0/0 = 0
5:0/0 = 0
5:1/0 = 0
5:2/0 = 0
4:2/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
7:2/0 = 0
6:2/0 = 0
6:1/0 = 0
7:1/0 = 0
7:0/0 = 0
6:0/0 = 0
0:4/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_02kog"]
texture = ExtResource("5_ovtxt")
texture_region_size = Vector2i(8, 8)
0:7/size_in_atlas = Vector2i(2, 1)
0:7/0 = 0
0:6/size_in_atlas = Vector2i(2, 1)
0:6/0 = 0
0:4/size_in_atlas = Vector2i(8, 2)
0:4/0 = 0
0:2/size_in_atlas = Vector2i(6, 2)
0:2/0 = 0
0:0/size_in_atlas = Vector2i(4, 2)
0:0/0 = 0
4:0/size_in_atlas = Vector2i(2, 2)
4:0/0 = 0
6:0/size_in_atlas = Vector2i(2, 2)
6:0/0 = 0
14:8/size_in_atlas = Vector2i(2, 2)
14:8/0 = 0
6:10/size_in_atlas = Vector2i(4, 2)
6:10/0 = 0
10:10/size_in_atlas = Vector2i(6, 2)
10:10/0 = 0
6:8/size_in_atlas = Vector2i(8, 2)
6:8/0 = 0
12:12/size_in_atlas = Vector2i(4, 4)
12:12/0 = 0
8:12/size_in_atlas = Vector2i(4, 4)
8:12/0 = 0
6:12/size_in_atlas = Vector2i(2, 2)
6:12/0 = 0
6:14/size_in_atlas = Vector2i(2, 2)
6:14/0 = 0
0:8/size_in_atlas = Vector2i(6, 8)
0:8/0 = 0
2:6/size_in_atlas = Vector2i(2, 2)
2:6/0 = 0
4:6/size_in_atlas = Vector2i(2, 2)
4:6/0 = 0
6:6/size_in_atlas = Vector2i(2, 2)
6:6/0 = 0
8:6/size_in_atlas = Vector2i(2, 2)
8:6/0 = 0
8:0/size_in_atlas = Vector2i(2, 2)
8:0/0 = 0
6:2/size_in_atlas = Vector2i(2, 2)
6:2/0 = 0
8:2/size_in_atlas = Vector2i(2, 2)
8:2/0 = 0
10:0/size_in_atlas = Vector2i(2, 2)
10:0/0 = 0
12:0/size_in_atlas = Vector2i(2, 2)
12:0/0 = 0
14:0/size_in_atlas = Vector2i(2, 2)
14:0/0 = 0
14:2/size_in_atlas = Vector2i(2, 2)
14:2/0 = 0
12:2/size_in_atlas = Vector2i(2, 2)
12:2/0 = 0
10:2/size_in_atlas = Vector2i(2, 2)
10:2/0 = 0
10:4/size_in_atlas = Vector2i(2, 2)
10:4/0 = 0
12:4/size_in_atlas = Vector2i(2, 2)
12:4/0 = 0
14:4/size_in_atlas = Vector2i(2, 2)
14:4/0 = 0
14:6/size_in_atlas = Vector2i(2, 2)
14:6/0 = 0
12:6/size_in_atlas = Vector2i(2, 2)
12:6/0 = 0
10:6/size_in_atlas = Vector2i(2, 2)
10:6/0 = 0
8:4/size_in_atlas = Vector2i(2, 2)
8:4/0 = 0

[sub_resource type="TileSet" id="TileSet_cftpx"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_tuqm5")
sources/1 = SubResource("TileSetAtlasSource_y1q1i")
sources/2 = SubResource("TileSetAtlasSource_mftgi")
sources/3 = SubResource("TileSetAtlasSource_02kog")

[sub_resource type="AtlasTexture" id="AtlasTexture_g8bt5"]
atlas = ExtResource("3_a5leq")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxxkl"]
atlas = ExtResource("3_a5leq")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2hsc"]
atlas = ExtResource("3_a5leq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hqai"]
atlas = ExtResource("3_a5leq")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bugj3"]
atlas = ExtResource("3_a5leq")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3nq6"]
atlas = ExtResource("3_a5leq")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppmt5"]
atlas = ExtResource("3_a5leq")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4h0tq"]
atlas = ExtResource("3_a5leq")
region = Rect2(160, 32, 32, 32)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_612a0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4bxe2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ux6i0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_631r8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r4alr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_132up"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qgunn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mx3uk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bbwhr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ougmw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tkqnf"]

[node name="SettingsMenu" type="Control"]
process_mode = 3
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f2gom")

[node name="SFXLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 422.0
offset_top = 438.0
offset_right = 782.0
offset_bottom = 513.0
theme_override_colors/font_color = Color(0.78676, 0.625009, 0.484766, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("6_c1yfi")
theme_override_font_sizes/font_size = 75
text = "SFX Volume"

[node name="MusicLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 393.0
offset_top = 311.0
offset_right = 753.0
offset_bottom = 386.0
theme_override_colors/font_color = Color(0.78676, 0.625009, 0.484766, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("6_c1yfi")
theme_override_font_sizes/font_size = 75
text = "Music Volume"

[node name="MusicVolume" type="HSlider" parent="."]
layout_mode = 2
offset_left = 802.0
offset_top = 345.0
offset_right = 1002.0
offset_bottom = 361.0
tick_count = 10
ticks_on_borders = true

[node name="SFXVolume" type="HSlider" parent="."]
layout_mode = 0
offset_left = 806.0
offset_top = 476.0
offset_right = 1006.0
offset_bottom = 492.0
tick_count = 10
ticks_on_borders = true

[node name="SettingsTitle" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -279.0
offset_right = 656.0
offset_bottom = 235.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_8gg7j")

[node name="Background" type="TileMapLayer" parent="."]
z_index = -1
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAAAAAAAAACAAEAAAAAAAEAAAACAAEAAAAAAAIAAAACAAEAAAAAAAMAAAACAAEAAAAAAAQAAAACAAEAAAAAAAUAAAACAAEAAAAAAAYAAAACAAEAAAAAAAcAAAACAAEAAAABAAAAAAACAAEAAAABAAEAAAACAAEAAAABAAIAAAACAAEAAAABAAMAAAACAAEAAAABAAQAAAAAAAAAAAABAAUAAAACAAEAAAABAAYAAAACAAEAAAABAAcAAAACAAEAAAACAAAAAAACAAEAAAACAAEAAAACAAEAAAACAAIAAAACAAEAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAACAAEAAAACAAYAAAACAAEAAAACAAcAAAACAAEAAAADAAAAAAACAAEAAAADAAEAAAACAAEAAAADAAIAAAACAAEAAAADAAMAAAACAAEAAAADAAQAAAAAAAAAAAADAAUAAAACAAEAAAADAAYAAAACAAEAAAADAAcAAAACAAEAAAAEAAAAAAACAAEAAAAEAAEAAAACAAEAAAAEAAIAAAACAAEAAAAEAAMAAAACAAEAAAAEAAQAAAACAAEAAAAEAAUAAAACAAEAAAAEAAYAAAACAAEAAAAEAAcAAAACAAEAAAAFAAAAAAACAAEAAAAFAAEAAAACAAEAAAAFAAIAAAACAAEAAAAFAAMAAAACAAEAAAAFAAQAAAACAAEAAAAFAAUAAAACAAEAAAAFAAYAAAACAAEAAAAFAAcAAAACAAEAAAAGAAAAAAACAAEAAAAGAAEAAAACAAEAAAAGAAIAAAACAAEAAAAGAAMAAAACAAEAAAAGAAQAAAACAAEAAAAGAAUAAAACAAEAAAAGAAYAAAACAAEAAAAGAAcAAAACAAEAAAAHAAAAAAACAAEAAAAHAAEAAAACAAEAAAAHAAIAAAACAAEAAAAHAAMAAAACAAEAAAAHAAQAAAAAAAAAAAAHAAUAAAACAAEAAAAHAAYAAAACAAEAAAAHAAcAAAACAAEAAAAIAAAAAAACAAEAAAAIAAEAAAACAAEAAAAIAAIAAAACAAEAAAAIAAMAAAACAAEAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAACAAEAAAAIAAcAAAACAAEAAAAJAAAAAAACAAEAAAAJAAEAAAACAAEAAAAJAAIAAAACAAEAAAAJAAMAAAACAAEAAAAJAAQAAAACAAEAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAACAAEAAAAKAAAAAAACAAEAAAAKAAEAAAACAAEAAAAKAAIAAAACAAEAAAAKAAMAAAACAAEAAAAKAAQAAAACAAEAAAAKAAUAAAACAAEAAAAKAAYAAAACAAEAAAAKAAcAAAACAAEAAAALAAAAAAACAAEAAAALAAEAAAACAAEAAAALAAIAAAACAAEAAAALAAMAAAACAAEAAAALAAQAAAACAAEAAAALAAUAAAACAAEAAAALAAYAAAACAAEAAAALAAcAAAACAAEAAAAMAAAAAAACAAEAAAAMAAEAAAACAAEAAAAMAAIAAAACAAEAAAAMAAMAAAACAAEAAAAMAAQAAAACAAEAAAAMAAUAAAACAAEAAAAMAAYAAAACAAEAAAAMAAcAAAACAAEAAAANAAAAAAACAAEAAAANAAEAAAACAAEAAAANAAIAAAACAAEAAAANAAMAAAACAAEAAAANAAQAAAACAAEAAAANAAUAAAACAAEAAAANAAYAAAACAAEAAAANAAcAAAACAAEAAAAOAAAAAAACAAEAAAAOAAEAAAACAAEAAAAOAAIAAAACAAEAAAAOAAMAAAACAAEAAAAOAAQAAAACAAEAAAAOAAUAAAACAAEAAAAOAAYAAAACAAEAAAAOAAcAAAACAAEAAAAPAAAAAAACAAEAAAAPAAEAAAACAAEAAAAPAAIAAAACAAEAAAAPAAMAAAACAAEAAAAPAAQAAAACAAEAAAAPAAUAAAACAAEAAAAPAAYAAAACAAEAAAAPAAcAAAACAAEAAAAQAAAAAAACAAEAAAAQAAEAAAACAAEAAAAQAAIAAAACAAEAAAAQAAMAAAACAAEAAAAQAAQAAAACAAEAAAAQAAUAAAACAAEAAAAQAAYAAAACAAEAAAAQAAcAAAACAAEAAAAKAAgAAAAAAAAAAAAKAAkAAAAAAAAAAAALAAgAAAAAAAAAAAALAAkAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAkAAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAkAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAQAAgAAAAAAAAAAAAQAAkAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAARAAAAAAAAAAAAAAARAAEAAAAAAAAAAAARAAIAAAAAAAAAAAARAAMAAAAAAAAAAAARAAQAAAAAAAAAAAARAAUAAAAAAAAAAAARAAYAAAAAAAAAAAARAAcAAAAAAAAAAAARAAgAAAAAAAAAAAARAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAABAAoAAAAAAAAAAAACAAoAAAAAAAAAAAADAAoAAAAAAAAAAAAEAAoAAAAAAAAAAAAFAAoAAAAAAAAAAAAGAAoAAAAAAAAAAAAHAAoAAAAAAAAAAAAIAAoAAAAAAAAAAAAJAAoAAAAAAAAAAAAKAAoAAAAAAAAAAAALAAoAAAAAAAAAAAAMAAoAAAAAAAAAAAANAAoAAAAAAAAAAAAOAAoAAAAAAAAAAAAPAAoAAAAAAAAAAAAQAAoAAAAAAAAAAAARAAoAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_cftpx")

[node name="MoveLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 665.0
offset_top = 212.0
offset_right = 785.0
offset_bottom = 287.0
theme_override_colors/font_color = Color(0.78676, 0.625009, 0.484766, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("6_c1yfi")
theme_override_font_sizes/font_size = 75
text = "Move"

[node name="AKeyButton" type="TextureButton" parent="MoveLabel"]
layout_mode = 0
offset_left = -223.0
offset_top = 6.0
offset_right = -191.0
offset_bottom = 38.0
scale = Vector2(2.0456, 2.0456)
texture_normal = SubResource("AtlasTexture_g8bt5")
texture_pressed = SubResource("AtlasTexture_uxxkl")
stretch_mode = 0

[node name="WKeyButton" type="TextureButton" parent="MoveLabel"]
layout_mode = 0
offset_left = -154.0
offset_top = -62.0
offset_right = -122.0
offset_bottom = -30.0
scale = Vector2(2.0456, 2.0456)
texture_normal = SubResource("AtlasTexture_d2hsc")
texture_pressed = SubResource("AtlasTexture_6hqai")
stretch_mode = 0

[node name="SKeyButton" type="TextureButton" parent="MoveLabel"]
layout_mode = 0
offset_left = -154.0
offset_top = 6.0
offset_right = -122.0
offset_bottom = 38.0
scale = Vector2(2.0456, 2.0456)
texture_normal = SubResource("AtlasTexture_bugj3")
texture_pressed = SubResource("AtlasTexture_j3nq6")
stretch_mode = 0

[node name="DKeyButton" type="TextureButton" parent="MoveLabel"]
layout_mode = 0
offset_left = -83.0
offset_top = 6.0
offset_right = -51.0
offset_bottom = 38.0
scale = Vector2(2.0456, 2.0456)
texture_normal = SubResource("AtlasTexture_ppmt5")
texture_pressed = SubResource("AtlasTexture_4h0tq")
stretch_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -102.0
offset_top = -112.0
offset_right = 98.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.623529, 0.176471, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.858824, 0.254902, 0, 1)
theme_override_colors/font_color = Color(0.933333, 0.933333, 0.894118, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("6_c1yfi")
theme_override_font_sizes/font_size = 75
theme_override_styles/focus = SubResource("StyleBoxEmpty_612a0")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4bxe2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ux6i0")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_631r8")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_r4alr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_132up")
theme_override_styles/hover = SubResource("StyleBoxEmpty_qgunn")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_mx3uk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_bbwhr")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ougmw")
theme_override_styles/normal = SubResource("StyleBoxEmpty_tkqnf")
text = "Back"

[node name="SelectSFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_2r4mj")
bus = &"SFX"

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
autoplay = true
bus = &"Music"

[connection signal="changed" from="MusicVolume" to="." method="_on_music_volume_changed"]
[connection signal="changed" from="SFXVolume" to="." method="_on_sfx_volume_changed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
